# record-of-boj

./: .flake8  .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
contenst_1134/: a.py  b.py  d.py
examples/: 11868_v1.rs  1200_1_v1.rs  1546_v1.rs  15655_v1.rs  15656_v1.rs  1991_v1.rs  2164_v1.rs  5582_v1.rs  7568_v1.rs
gold/: 10026_v1.py  12865_v1.py  17144_v1.py  1753_v1.py  1916_v1.py
python3/: 10021_v1.py  1011_v1.py  10188_v1.py  1018_v1.py  10814_v1.py  10819_v1.py  10974_v1.py  1106_v1.py  1111_v1.py  11131_v1.py  11161_v1.py  11312_v1.py  11403_v1.py  11657_v1.py  11660_v1.py  11721_v1.py  11779_v1.py  11868_v1.py  1253_v1.py  12865_v2.py  12919_v1.py  1296_v1.py  13144_v1.py  1316_v1.py  1330_v1.py  13549_v1.py  13913_v1.py  14226_v1.py  14500_v1.py  14501_v1.py  14502_v1.py  1504_v1.py  15128_v1.py  15591_v1.py  15989_v1.py  1654_v1.py  16935_v1.py  16953_v1.py  17140_v1.py  1748_v1.py  (+44 more)
rust/: 11286_v1.rs  11404_v1.rs  11725_v1.rs  11868_v1.rs  1259_v1.rs  1389_v1.rs  1485_v1.rs  1546_v1.rs  15649_v1.rs  15650_v1.rs  15651_v1.rs  15652_v1.rs  15654_v1.rs  15655_v1.rs  15656_v1.rs  15657_v1.rs  15686_v1.rs  1991_v1.rs  2448_v1.rs  5639_v1.rs  7568_v1.rs  9251_v1.rs  9663_v1.rs  Cargo.toml
rust/examples/: 1005_v1.rs  1016_v1.rs  1032_v1.rs  10655_v1.rs  1068_v1.rs  10715_v1.rs  10775_v1.rs  10797_v1.rs  10807_v1.rs  10866_v1.rs  10868_v1.rs  10871_v1.rs  10917_v1.rs  10971_v1.rs  10996_v1.rs  10999_v1.rs  11000_v1.rs  11004_v1.rs  11021_v1.rs  11022_v1.rs  11047_v1.rs  11049_v1.rs  11053_v1.rs  1107_v1.rs  11143_v1.rs  11143_v2.rs  11284_v1.rs  1132_v1.rs  11501_v1.rs  11505_v1.rs  1153_v1.rs  1157_v1.rs  11581_v1.rs  1167_v1.rs  11694_v1.rs  11725_v1.rs  11758_v1.rs  11880_v1.rs  1197_v1.rs  1238_v1.rs  (+243 more)
silver/: 1149_v1.py  1181_v1.py  1769_v1.py  1932_v1.py  2751_v1.py  9012_v1.py
ts/: README.md  build.ts  bun.lockb  package.json  tsconfig.json
ts/src/: 10817_v1.ts  10902_v1.ts  11292_v1.ts  11576_v1.ts  1312_v1.ts  13985_v1.ts  15885_v1.ts  1688_v1.ts  2511_v1.ts  25640_v1.ts  30035_v1.ts  31611_v1.ts  32399_v1.ts  33964_v1.ts  34217_v1.ts  34400_v1.ts  7662_v1.ts  7662_v2.ts  9085_v1.ts  9693_v1.ts
