[package]
name = "record-of-boj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="main"
path = "rust/main.rs"

[[example]]
name="1485_v1"
path="rust/1485_v1.rs"

[[example]]
name="11404_v1"
path="rust/11404_v1.rs"

[[example]]
name="11868_v1"
path="rust/11868_v1.rs"

[[example]]
name="1389_v1"
path="rust/1389_v1.rs"

[[example]]
name="11286_v1"
path="rust/11286_v1.rs"

[[example]]
name="7568_v1"
path="rust/7568_v1.rs"