[tool.poetry]
name = "record-of-boj"
version = "0.1.0"
description = "My Record of Problem Solving in BOJ"
authors = ["Kim, Hyeonseo <dodok8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79